Optimize map height functions